-bug#0001236: set 'stats_recache' to zero when no re-index is present
-bug#0001240: SNMP string cleanup removes too many '=' signs
-bug#0001244: missing closing </form> on host.php
-bug#0001247: snmp ping won't work for snmp v3
-bug#0001230: poller stops updating rrd files
-bug#0001262: Do not allow deletion of Graph Export User
-bug: Host save failed in FireFox 3 for non-SNMP V3 hosts, complaining about "password mismatch"
-bug: Initialization of snmp_auth when using SNMP=NONE
-bug: Speed up add_graphs.php in most cases (still slow only if --input-fields is used)
-bug: If the poller_output table is not empty, don't flood the log
-bug: Remove warnings appear in the httpd log relative to reset attempts on settings array
-bug: Add API Automation tool quietMode to additional functions
-bug: When Cacti is launched from within an iframe, cookies are dropped from IE6
-bug: Database upgrade and cacti.sql differ
-bug: drop color setting background on FF does not work
-bug: cli/add_tree.php requires as least a host-id for --list-graphs
-bug: add_tree.php did not allow nodes with propagating sort options
-bug: When adding a tree node via the api numeric and natural were reversed
-bug: When saving a data query based data templates, their data sources would become corrupt
-bug: If your system contains INNODB tables, the Technical Support page would hang
-bug: The default user tree link icon would not be properly highlighted when opening graphs
-bug: Severe performance problems when adding data query based graphs.
-bug: Default refresh on Cacti Log was too quick
-bug: Some users don't like the idea of automatic page refreshes
-bug: Allow more rows to be visible in Cacti pages
-feature#0001249: New pseudo CDEF variables for "Count All|Similar Data Sources (NO)?DUPS"
-feature#0001235: CLI script needed to activate a query: add_data_query.php
-feature#0001233: Move $export_types variable definition from templates_export.php to include/global_form.php